force-app/main/default/objects/leaseworks__Accounting_Rules_CM__mdt/leaseworks__Accounting_Rules_CM__mdt.object-meta.xml
<CustomObject>
    <description>The rules for JE creation based on Codes and Transaction Type</description>
    <label>Accounting Rules</label>
    <pluralLabel>Accounting Rules</pluralLabel>
</CustomObject>