force-app/main/default/objects/leaseworks__Accounting_Rules_CM__mdt/fields/leaseworks__Credit_Debit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Credit_Debit__c</fullName>
    <label>Credit/Debit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
                <default>true</default>
                <label>Credit</label>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>