force-app/main/default/objects/leaseworks__Accounting_Rules_CM__mdt/fields/leaseworks__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Object_Type__c</fullName>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>