force-app/main/default/objects/leaseworks__Accounting_Rules_CM__mdt/fields/leaseworks__Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>